--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
     "require-dev": {
         "typo3/testing-framework": "^7.0",
         "squizlabs/php_codesniffer": "^3.9",
-        "phpro/grumphp": "^2.5",
         "phpstan/phpstan": "^1.11",
-        "phpunit/phpunit": "^10.5"
+        "phpunit/phpunit": "^10.5",
+        "phpro/grumphp": "^2.5"
     },
     "autoload":{
         "psr-4":{
