--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
         "squizlabs/php_codesniffer": "^3.9",
         "phpstan/phpstan": "^1.11",
         "phpunit/phpunit": "^10.5",
-        "phpro/grumphp": "^2.5"
+        "phpro/grumphp": "^2.5",
+        "phpmd/phpmd": "^2.15",
+        "helmich/typo3-typoscript-lint": "^3.2",
+        "madikon/grumphp-typoscript-lint": "^1.2"
     },
     "autoload":{
         "psr-4":{
