--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "phpro/grumphp": "^2.5",
         "phpmd/phpmd": "^2.15",
         "helmich/typo3-typoscript-lint": "^3.2",
-        "madikon/grumphp-typoscript-lint": "^1.2"
+        "madikon/grumphp-typoscript-lint": "^1.2",
+        "friendsofphp/php-cs-fixer": "^3.57",
+        "typo3/coding-standards": "^0.7.1"
     },
     "autoload":{
         "psr-4":{
