--- a/grumphp.yml
+++ b/grumphp.yml
@@ -9,7 +9,10 @@ grumphp:
       max_body_width: 72
       max_subject_width: 60
       matchers:
-        Must contain JIRA issue number: /JIRA-\d+/
+        Must contain JIRA issue number: /BMASDFCT-\d+/
+        #Must start with:  /(feat:|chore:)/
+      case_insensitive: true
+      multiline: true
 
     # Composer
     composer:
